# sandbox.lightbot

./: .env.example  .gitignore  README.md  config.toml.example  index.html  lightbot.spec  package-lock.json  package.json  pyproject.toml  tailwind.config.js  vite.config.ts
planning/: bugs.md  implementation_plan.md  multi_tab.md  searxng.md  task.md  tech_spec.md  wishlist.md
python/: __init__.py  engine.py  prompts.py  server.py  test_searxng.py
python/tests/: __init__.py  test_engine.py  test_query_rewrite_searxng.py  test_server.py
python/tools/: __init__.py  query_rewrite.py  search.py
scripts/: build-sidecar.sh  bump-version.sh  migrate-config.py  release.sh
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: README.md  icon.icns
src-tauri/src/: main.rs
src/components/: ChatWindow.tsx  ClipModal.tsx  MessageBubble.tsx  MessageItem.tsx  ModelConfigEditor.tsx  SessionTabs.tsx  SettingsPanel.tsx  TitleBar.tsx
src/contexts/: ClipContext.tsx
src/hooks/: useChat.ts  useChatSessions.ts  useClip.ts  useSidecar.ts
