[project]
name = "lightbot"
version = "1.3.0"
description = "Lightweight AI Chat Bot with Web Search"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "llama-index>=0.12.0",
    "llama-index-llms-openai>=0.3.0",
    "llama-index-llms-openai-like>=0.3.0",
    "ddgs>=9.10.0",
    "aiohttp>=3.11.0",
    "pydantic>=2.10.0",
    "python-dotenv>=1.0.0",
    "tomli>=2.0.0",
    "tomli-w>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.25.0",
    "httpx>=0.28.0",
    "pyinstaller>=6.11.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["python"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["python/tests"]
